--- a/news.CSS
+++ b/news.CSS
@@ -5,12 +5,22 @@ body {
   display: flex;
   flex-direction: column;
   font-weight: 600;
+  height: 100vh;
+}
+
+.desktop{
+  display: none;
 }
 .old {
   background-color: hsl(0, 0%, 100%);
-  width: 375px;
-  height: 700px;
+max-width: 740px;
+height: auto;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+
+ 
+
 }
 .update {
   font-weight: bold;
@@ -45,7 +55,6 @@ body {
   color: hsl(235, 18%, 26%);
   margin: 0 0 0 30px;
 }
-
 .much {
 font-family: Arial;
 font-size: 12px;
@@ -101,4 +110,28 @@ color: hsl(234, 29%, 20%);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 0 0 20px 0 ;
+}
+@media screen and (min-width: 600px) {
+body{
+background-color: hsl(235, 18%, 26%);
+}
+.old{
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 20px;
+  gap: 20px;
+}
+.desktop{
+  display: block;
+  height: 410px;
+}
+.mobile-img{
+  display: none;
+}
+}
+
+.mobile-img .desktop {
+  width: 100%;
+  height: 100%;
 }
